--- a/25-01-2023/Esercizio_2/index.html
+++ b/25-01-2023/Esercizio_2/index.html
@@ -16,31 +16,31 @@
         <h1>Tipi di Pokemon della prima generazione</h1>
         <div class="column__wrapper">
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/7/75/Battrio_Normal_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/7/75/Battrio_Normal_type.png" />
                 <div class="overlay overlay__normal"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/2/29/Battrio_Water_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/2/29/Battrio_Water_type.png" />
                 <div class="overlay overlay__water"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/8/8a/Battrio_Fire_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/8/8a/Battrio_Fire_type.png" />
                 <div class="overlay overlay__fire"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/0/02/Battrio_Electric_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/0/02/Battrio_Electric_type.png" />
                 <div class="overlay overlay__lightning"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/1/1b/Battrio_Fighting_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/1/1b/Battrio_Fighting_type.png" />
                 <div class="overlay overlay__fighting"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/0/08/Battrio_Grass_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/0/08/Battrio_Grass_type.png" />
                 <div class="overlay overlay__grass"></div>
             </div>
             <div class="column">
-                <img src="https://archives.bulbagarden.net/media/upload/6/61/Battrio_Psychic_type.png"></img>
+                <img src="https://archives.bulbagarden.net/media/upload/6/61/Battrio_Psychic_type.png" />
                 <div class="overlay overlay__psychic"></div>
             </div>
         </div>
