--- a/27-01-2023/Esercizio_2/index.html
+++ b/27-01-2023/Esercizio_2/index.html
@@ -17,16 +17,21 @@
             <img class="logo" src="./assets/img/logo.png">
             <a href="./search/search.html">Search a Serie</a>
         </nav>
+
         <h2>POPULAR SERIES</h2>
         <section id="popular"></section>
         <h2>TOP RATED</h2>
         <section id="top__rated"></section>
+        <h2>MOST VIEWED TODAY</h2>
+        <section id="today"></section>
         <modal id="modal">
             <div class="modal__card"></div>
             <div class="modal__overlay"></div>
         </modal>
     </main>
-    <div class="body__overlay"></div>
+    <div class="footer__content">
+        <h2>Movie Collection - All rights reserved</h2>
+    </div>
 </body>
 
 </html>
