--- a/27-01-2023/Esercizio_2/search/search.html
+++ b/27-01-2023/Esercizio_2/search/search.html
@@ -12,12 +12,22 @@
 </head>
 
 <body>
-    <div class="input__wrapper">
-        <input id="user__input" type="text" placeholder="Insert Title">
-        <button id="search__btn">Search</button>
-    </div>
-    <div class="search__wrapper"></div>
-    <div class="body__overlay"></div>
+    <nav class="search__header">
+        <img class="logo" src="../assets/img/logo.png">
+        <a href="../index.html">Home</a>
+    </nav>
+    <main>
+        <div class="input__wrapper">
+            <input id="user__input" type="text" placeholder="Insert Title">
+            <button id="search__btn">Search</button>
+        </div>
+        <div class="search__wrapper"></div>
+    </main>
+    <footer>
+        <div class="footer__content">
+            <h2>Movie Collection - All rights reserved</h2>
+        </div>
+    </footer>
 </body>
 
 </html>
